[package]
name = "myPiOs"
version = "0.1.0"
authors = ["tom"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tock-registers = { version = "0.6.x" }
cortex-a = { version = "5.x.x" }
spin = { version = "0.9.x" }
staticvec = { version = "0.10.6", default-features = false }